--- a/package.json
+++ b/package.json
@@ -31,6 +31,12 @@
     "webpack": "^5.58.1",
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.9.0",
-    "webpack-dev-server": "^4.3.1"
-  }
+    "webpack-dev-server": "^4.3.1",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
+    "css-minimizer-webpack-plugin": "^3.4.1",
+    "mini-css-extract-plugin": "^2.6.0",
+    "react-refresh": "^0.11.0",
+    "terser-webpack-plugin": "^5.3.1"
+  },
+  "dependencies": {}
 }
