--- a/package.json
+++ b/package.json
@@ -38,5 +38,7 @@
     "react-refresh": "^0.11.0",
     "terser-webpack-plugin": "^5.3.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "daisyui": "^2.13.3"
+  }
 }
